# openai-sandbox-py

./: .env  .env.az.openai.gpt-35-turbo  .env.az.openai.text-curie  .env.az.openai.text-davinci  .env.az.openai.text-embedding-ada  .env.openai.gpt-35-turbo  .env.openai.text-curie  .env.openai.text-davinci  .env.openai.text-embedding-ada  .gitignore  .gitlinks  .pre-commit-config.yaml  .prettierignore  .pylintrc  LICENSE.md  README.md  TODO.md  bower.json  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  pypyr-config.yaml  pytest.ini  requirements.dev.txt  requirements.pipx.txt  requirements.poetry-plugin.txt  requirements.prd.txt  requirements.txt  requirements.upgrade.txt  ruff.toml  sample.env  sample.env.az  sample.env.az.openai.text-curie  sample.env.az.openai.text-embedding-ada  sample.env.openai.api  sample.env.openai.params  setup.py
.github/workflows/: always.yml
XXX/src/experiments/classify/: classify.py
XXX/src/experiments/jester/: jester.py
XXX/src/experiments/name/: name.py
XXX/src/experiments/new_bill_search/: csv_to_json.py  json_to_redis.py  search_json.py  search_redis.py
XXX/src/experiments/translate/: translate.py
XXX/src/libs/: api.py  env.py
XXX/src/open_ai/libs/: api.py
XXX/src/sandbox/libs/: api.py
assets/experiments/boots_game/: setup.prompty
assets/prompting/chat/autocomplete/: messages.tsv
assets/prompting/chat/electronics/: products.json  system.v1.tpl.txt
assets/prompting/chat/electronics-verifier/: system.txt
assets/prompting/chat/override/: system.v1.tpl.txt
data/facts/laws/: asimov.txt  motion.txt  thermodynamics.txt  universal_gravitation.txt
data/moderation/samples/: harm.txt  warhead.txt
data/prompting/chat/Support/: system.tpl.txt
data/prompting/chat/casual/: system.txt
data/prompting/chat/electronics/: system.v2.tpl.txt
data/prompting/chat/friendly/: prompt.json  system.txt
data/prompting/chat/laptops/: system.tpl.txt
data/prompting/chat/override/: system.v2.tpl.txt
data/prompting/text/Actions/: prompt.v1.txt
data/prompting/text/water bottle/: prompt.v1.txt  prompt.v2.txt
data/prompts/chat/AI Teacher/: System message.txt
data/prompts/classify/: sentiment.txt
data/prompts/code/SQL/: query.txt
data/prompts/translate/: fr-to-en.txt
env/: sample.src.sh.sample
experiments/boots_game/run01/: chat.json
pipelines/: clean.yaml  lint.yaml  qa.yaml  style.yaml  test.yaml
scripts/: clean.ba.sh.sh  cwd.ba.sh  install.ba.sh  lint.ba.sh  prepare.ba.sh  setup.ba.sh  style.ba.sh
scripts/env/: source.ba.sh
scripts/pip/: install.ba.sh  upgrade.ba.sh
scripts/pipx/: install.ba.sh
scripts/poetry/: export.ba.sh
scripts/poetry/plugins/: add.ba.sh  run.ba.sh
scripts/prettier/: write.ba.sh
scripts/python/: black.ba.sh  isort.ba.sh  pylint.ba.sh
src/: main.py
src/chat/: jester.py  name.py  shakesperean.py
src/libs/: api.py  cache.py  env.py  strings.py
src/my/: openai.py
src/open_ai/: __main__.py
src/open_ai/config/: configuration.py  settings.py
src/open_ai/libs/: cache.py  vectors.py
src/sandbox/config/: configuration.py  settings.py
src/sandbox/libs/: cache.py  printing.py
src/text/: classify.py  common.py  embedding.py  translate.py
tests/: test_basic.py
typings/redis/: __init__.pyi  backoff.pyi  client.pyi  cluster.pyi  connection.pyi  crc.pyi  credentials.pyi  exceptions.pyi
typings/redis/asyncio/: __init__.pyi  client.pyi  cluster.pyi  connection.pyi
typings/redis/commands/: __init__.pyi  cluster.pyi  core.pyi  helpers.pyi
(+215 files in other folders)
