[tool.poetry]
name = "openai-sandbox-py"
version = "0.1.0"
description = ""
authors = ["Juan Guerrero <JCystems@gMail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.7"
python-dotenv = "^1.0.0"
num2words = "^0.5.12"
matplotlib = "^3.7.1"
plotly = "^5.14.1"
scikit-learn = "^1.2.2"
pandas = "^2.0.2"
tiktoken = "^0.4.0"
json5 = "^0.9.14"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
